# Kiwi

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Form_8h.html  Form_8h__dep__incl.dot  Form_8h__incl.dot  Kiwi.sln  Kiwi_8h.html  Kiwi_8h__incl.dot  LICENSE  README.md  SwTokenizer_8h.html  SwTokenizer_8h__incl.dot  Types_8h.html  Types_8h__dep__incl.dot  Types_8h__incl.dot  TypoTransformer_8h.html  TypoTransformer_8h__dep__incl.dot  TypoTransformer_8h__incl.dot  annotated.html  build_model.vcxproj  build_model.vcxproj.filters  capi_8h.html  capi_8h__incl.dot  classes.html  classkiwi_1_1ChrDataset-members.html  classkiwi_1_1ChrDataset.html  classkiwi_1_1ChrTokenizer-members.html  classkiwi_1_1ChrTokenizer.html  classkiwi_1_1ClusterData-members.html  classkiwi_1_1ClusterData.html  classkiwi_1_1Exception.html  classkiwi_1_1Exception__coll__graph.dot  classkiwi_1_1Exception__inherit__graph.dot  classkiwi_1_1FixedPairVector-members.html  classkiwi_1_1FixedPairVector.html  (+506 more)
Binary/: Kiwi_0.2x64.zip.REMOVED.git-id  Kiwi_0.2x64_Linux.zip.REMOVED.git-id  Kiwi_0.2x86.zip.REMOVED.git-id  Kiwi_0.3x64.zip.REMOVED.git-id  Kiwi_0.3x64_Linux.zip.REMOVED.git-id  Kiwi_0.4x64.zip.REMOVED.git-id  Kiwi_0.4x64_Linux.zip.REMOVED.git-id  Kiwi_0.4x86.zip.REMOVED.git-id
E3/: Kiwi_E3.c
KiwiC/: KiwiC.cpp  KiwiC.h  KiwiC.vcxproj  KiwiC.vcxproj.filters  ReadMe.txt  stdafx.cpp
KiwiCTester/: KiwiCTester.cpp  KiwiCTester.vcxproj  KiwiCTester.vcxproj.filters  ReadMe.txt  stdafx.cpp
KiwiGui/: App.xaml  App.xaml.cs  BatchDlg.xaml  BatchDlg.xaml.cs  KiwiCS.cs  KiwiGui.csproj  KiwiGui.sln  MainWindow.xaml  MainWindow.xaml.cs  PlatformCheck.cs  Splash.xaml  Splash.xaml.cs
KiwiLibrary/: BakedMap.hpp  HangulMacro.h  KEndingMaker.cpp  KEndingMaker.h  KFeatureTestor.cpp  KFeatureTestor.h  KForm.cpp  KForm.h  KMemory.cpp  KMemory.h  KMemoryChar.h  KMemoryKChunk.h  KMemoryKMorphemeNode.h  KMemorySpec.h  KMemoryTrie.h  KModelMgr.cpp  KModelMgr.h  KNLangModel.cpp  KNLangModel.h  KTest.cpp  KTest.h  KTrie.cpp  KTrie.h  KWordDetector.cpp  KWordDetector.h  Kiwi.cpp  Kiwi.h  KiwiHeader.h  KiwiLibrary.cpp  KiwiLibrary.vcxproj  KiwiLibrary.vcxproj.filters  KiwiLibraryLinux.vcxproj  ReadMe.txt  ThreadPool.h  Trie.hpp  Utils.cpp  Utils.h  combineRule.txt  main.cpp  stdafx.cpp  (+8 more)
KiwiLibraryLinux/: KiwiLibraryLinux.vcxproj
KiwiPy/: KiwiPy.cpp  KiwiPy.vcxproj  KiwiPy.vcxproj.filters  KiwiPyLinux.vcxproj  README.md  ReadMe.txt  __init__.py
KiwiRun/: KiwiRun.cpp  KiwiRun.vcxproj  KiwiRun.vcxproj.filters  KiwiRunLinux.vcxproj  ReadMe.txt  stdafx.cpp  stdafx.h  targetver.h
KiwiRunLinux/: KiwiRunLinux.vcxproj
KiwiTester/: KTest.cpp  KTest.h  KiwiTester.cpp  KiwiTester.vcxproj  KiwiTester.vcxproj.filters  LCS.hpp  PMI_Dist_Coef.txt  PMI_Dist_Result.txt  ReadMe.txt  experiment_langModelCutThreshold.txt  extracted.txt  extractionSample.txt  extraction_namu.txt.REMOVED.git-id  stdafx.cpp  stdafx.h  wrongs01.txt  wrongs01s.txt  wrongs02.txt  wrongs02s.txt  wrongs03.txt  wrongs03s.txt  wrongs13s.txt.REMOVED.git-id  wrongs15s.txt.REMOVED.git-id  wrongs22s.txt.REMOVED.git-id  wrongsV201s.txt  wrongsV202s.txt  wrongsV203s.txt  wrongst.txt
ModelGenerator/: LPartTailStat.txt  ML_spo_small.txt  NotNounSuffix.txt  NounExtractionTest.xlsx  NounRPartList.txt  NounTailList.txt  Parser.py  README.txt  RModel.txt  RPartStat.py  RPartStat.txt  RPosModel.txt  Test.py  VA.txt  VV.txt  VX.txt  XSA.txt  XSV.txt  allomorphs.txt  ambiguity.txt  ambiguityWords.txt  combineRule.txt  combined.txt  combiner.py  combinerV2.py  combiningRule.txt  convertModuToKiwi.py  default.dict  detectAmbiguity.py  distModel.bin.REMOVED.git-id  distModel.py  extract.mdl  extractMorphemeList.py  freqPOS.xlsx  fullmodel.txt  hAdj.txt  kiwi_wrong01s.txt  kiwi_wrong02s.txt  kiwi_wrong03s.txt  kiwi_wrong10s.txt.REMOVED.git-id  (+29 more)
TestFiles/: 01.txt  longSpok.txt.REMOVED.git-id  spok.txt  verbChart.txt
TestSets/: 01.txt  02.txt  02s.txt  03.txt  03s.txt  10s.txt.REMOVED.git-id  11s.txt.REMOVED.git-id  12s.txt  13s.txt.REMOVED.git-id  14s.txt.REMOVED.git-id  15s.txt.REMOVED.git-id  16s.txt.REMOVED.git-id  17s.txt  18s.txt  19s.txt  22s.txt.REMOVED.git-id  23s.txt
bindings/android/src/main/cpp/: CMakeLists.txt
bindings/ios/: CMakeLists.txt  KiwiSwift.podspec  Package.swift  README.md
bindings/ios/csrc/: kiwi_swift.cpp
bindings/ios/include/: Kiwi.h
bindings/ios/swift/: Kiwi.swift
bindings/ios/tests/: KiwiSwiftTests.swift
bindings/java/: CMakeLists.txt  JniUtils.hpp  README.md  build.gradle  kiwi_java.cpp  proguard-rules.pro  settings.gradle
bindings/java/csrc/: JniUtils.hpp  kiwi_java.cpp
bindings/java/kr/pe/bab2min/: Kiwi.java  KiwiBuilder.java  KiwiTest.java
bindings/java/src/kr/pe/bab2min/: Kiwi.java  KiwiBuilder.java
bindings/java/test/: KiwiTest.java
bindings/wasm/: CMakeLists.txt  README.md  build.sh  kiwi_wasm.cpp  test.html
bindings/wasm/package/: .gitignore  package-lock.json  package.json  tsconfig.json
bindings/wasm/package-demo/: index.html  package-lock.json  package.json  vite.config.ts
bindings/wasm/package-demo/src/: index.ts  main.ts  modelFiles.ts  style.css  worker.ts
bindings/wasm/package/src/: build-args.ts  index.ts  kiwi-api.ts  kiwi-builder.ts  kiwi.ts  util.ts
bindings/wasm/package/test/: kiwi.test.ts
docs/: Doxyfile  Doxyfile.in  StreamProvider.md  conf.py  index.rst
eval_data/: web.txt  web_with_cont_typos.txt  web_with_typos.txt  written.txt
eval_result_test/: 01s.txt  02s.txt  03s.txt  17s.txt  18s.txt  web.txt  written.txt
kiwi-nlp/: hierarchy.html  index.html  modules.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  (+91 more)
test/: CMakeLists.txt  bit_encode.cpp  common.h  packages.config  test.cpp  test.vcxproj  test_QEncoder.cpp  test_c.cpp  test_combiner.cpp  test_cpp.cpp  test_sw_tokenizer.cpp  test_typo.cpp  written.fallback_byte.tokenizer.json  written.fallback_hangul.tokenizer.json  written.newline.tokenizer.json  written.tokenizer.json
test/evaluation/: 01s.txt
test/sample/: 02.txt  03.txt  longText.txt
(+293 files in other folders)
